--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-About</title>
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -34,6 +33,45 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Shipping Services in Dubai | About INC SHIPPING</title>
+    <meta name="description"
+        content="INC Express Shipping LLC, a leading provider of Logistics, Warehousing, and Shipping Services in Dubai, offers exclusive services with exceptional quality."/>
+    <meta name="keywords"
+        content="Cross Trade Service Company in Dubai, Corporate Courier Service in Dubai, Medical Equipment Shipping Services in Dubai, Sea Freight Services in Dubai, Customs Clearance Services in Dubai, Warehousing Company in Dubai / UAE, Best Courier Channel Partners in Dubai, Hazardous Goods Shipping Services in Dubai, Pharmaceutical Shipping Service in Dubai, Air Freight Company in Dubai" />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/about" />
+    <meta name="DC.title" content="Shipping Services in Dubai | About INC SHIPPING" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Shipping Services in Dubai | About INC SHIPPING"/>
+    <meta property="og:site_name" content="INC Express Shipping L.L.C"/>
+    <meta property="og:url" content="https://incshipping.com/about"/>
+    <meta property="og:description" content="INC Express Shipping LLC, a leading provider of Logistics, Warehousing, and
+        Shipping Services in Dubai, offers exclusive services with exceptional quality."/>
+    <meta property="og:type" content=website/>
+    <meta property="og:image" content=""/>
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/about" />
+    <meta property="twitter:title" content="Shipping Services in Dubai | About INC SHIPPING" />
+    <meta property="twitter:description"
+        content="INC Express Shipping LLC, a leading provider of Logistics, Warehousing, and Shipping Services in Dubai, offers exclusive services with exceptional quality." />
+    <meta property="twitter:image" content="" />
+
+    
+
 </head>
 
 <body>
