--- a/air-freight.html
+++ b/air-freight.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Services</title>
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -34,6 +33,46 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Air Freight Forwarding Company in Dubai | International Freight Shipping</title>
+    <meta name="description"
+        content="Leading Air Freight Forwarding Company in Dubai offering International Freight Shipping Services. Reliable, efficient Logistics solutions tailored to your needs."/>
+    <meta name="keywords"
+        content="Air Freight Services Dubai, Air Freight Company in Dubai, Air Cargo Company in Dubai, Air Cargo Services in Dubai, Air Freight Companies in Dubai, Air Freight Services in Dubai, Air Freight Companies Dubai, Air Freight Shipping Services, International Air Freight Service, Air Cargo Logistics in Dubai" />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/air-freight" />
+    <meta name="DC.title" content="Air Freight Forwarding Company in Dubai | International Freight Shipping" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Air Freight Company in Dubai | International Freight Shipping"/>
+    <meta property="og:site_name" content="INC Express Shipping L.L.C"/>
+    <meta property="og:url" content="https://incshipping.com/air-freight"/>
+    <meta property="og:description" content="Leading air freight company in Dubai offering international freight shipping
+        services. Reliable, efficient logistics solutions tailored to your needs."/>
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/air-freight" />
+    <meta property="twitter:title" content="Air Freight Company in Dubai | International Freight Shipping" />
+    <meta property="twitter:description"
+        content="Leading air freight company in Dubai offering international freight shipping services. Reliable, efficient logistics solutions tailored to your needs." />
+    <meta property="twitter:image" content="" />
+
+
+
+
 </head>
 
 <body>
