--- a/channel-partner.html
+++ b/channel-partner.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Services</title>
+
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -34,6 +34,48 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Best Courier Channel Partners in Dubai | INC Shipping</title>
+    <meta name="description" content="INC Express is recognized as one of the Best Courier Channel Partners in Dubai,
+        offering global parcel delivery and overnight secure transportation of documents and medical supplies." />
+    <meta name="keywords"
+        content="Best Courier Channel Partners In Dubai, Courier Channel Partners In Dubai, Courier Channel Partners in UAE, Courier Services in UAE, Courier Services Dubai, Courier Company in Dubai, The Professional Courier Services in UAE, Corporate Courier Service in Dubai, Shipping and Logistics Company in Dubai, Cargo Services UAE " />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/channel-partner" />
+    <meta name="DC.title" content="Best Courier Channel Partners in Dubai | INC Shipping" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Best Courier Channel Partners In Dubai | INC Shipping" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content="https://incshipping.com/channel-partner" />
+    <meta property="og:description"
+        content="INC Express is recognized as one of the best courier channel partners in
+        Dubai, offering global parcel delivery and overnight secure transportation of documents and medical supplies." />
+    <meta property="og:type" content=website />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/channel-partner" />
+    <meta property="twitter:title" content="Best Courier Channel Partners In Dubai | INC Shipping" />
+    <meta property="twitter:description"
+        content="INC Express is recognized as one of the best courier channel partners in Dubai, offering global parcel delivery and overnight secure transportation of documents and medical supplies." />
+    <meta property="twitter:image" content="" />
+
+
+
+
+
 </head>
 
 <body>
