--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Contact Us</title>
+
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -34,6 +34,47 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Contact Us - INC SHIPPING</title>
+    <meta name="description" content="Contact INC Express Shipping at +971 503524424. Visit us at Office M29, Freight
+        Gate 4, Dubai Airport Freezone, Dubai, UAE for all your shipping needs." />
+    <meta name="keywords"
+        content="Contact Air freight company in Dubai, Contact International Cargo Services Dubai, UAE, Contact Shipping and Logistics Company in Dubai, Contact Sea Freight,    Contact Road Freight Services in Dubai, Contact Temperature Control Cargo Service Dubai, Contact Cross Trade Service Company in Dubai, Contact Corporate Courier Service in Dubai, Contact Medical Equipment Shipping Services in Dubai, Contact Sea Freight Services in Dubai, Contact Customs Clearance Services in Dubai, Contact Warehousing Company in Dubai / UAE, Contact Hazardous goods, shipping services in Dubai, Contact Pharmaceutical shipping service in Dubai" />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/contact" />
+    <meta name="DC.title" content="Contact Us - INC SHIPPING" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Contact Us - INC SHIPPING" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content="https://incshipping.com/contact" />
+    <meta property="og:description"
+        content="Contact INC Express Shipping at +971 503524424. Visit us at Office M29, Freight Gate 4, Dubai Airport Freezone, Dubai, UAE for all your shipping needs." />
+    <meta property="og:type" content=website />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/contact" />
+    <meta property="twitter:title" content="Contact Us - INC SHIPPING" />
+    <meta property="twitter:description"
+        content="Contact INC Express Shipping at +971 503524424. Visit us at Office M29, Freight Gate 4, Dubai Airport Freezone, Dubai, UAE for all your shipping needs." />
+    <meta property="twitter:image" content="" />
+
+
+
+
+
 </head>
 
 <body>
