--- a/corporate-courier.html
+++ b/corporate-courier.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Services</title>
+
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -34,6 +34,47 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Courier Company in Dubai | INC Shipping Courier Services UAE</title>
+    <meta name="description" content=”INC Express is a leading Courier Company in Dubai, offering seamless corporate
+        delivery solutions across diverse industries with 24/7 service for a smooth supply chain.">
+    <meta name="keywords"
+        content="Courier Services in UAE, Courier Services Dubai, Courier Company in Dubai, The Professional Courier Services in UAE, Corporate Courier Service in Dubai, Middle East Leading Courier Services Dubai, The Professional International Courier in Dubai, International Courier Services in Dubai, Corporate Courier Service in Dubai, Shipping and Logistics Company in Dubai " />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/corporate-courier" />
+    <meta name="DC.title" content="Courier Company in Dubai | INC Shipping Courier Services UAE" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Courier Company in Dubai | INC Shipping Courier Services UAE"/>
+    <meta property="og:site_name" content=INC Express Shipping L.L.C>
+    <meta property="og:url" content="https://incshipping.com/corporate-courier"/>
+    <meta property="og:description" content="INC Express is a leading courier company in Dubai, offering seamless
+        corporate delivery solutions across diverse industries with 24/7 service for a smooth supply chain."/>
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/corporate-courier" />
+    <meta property="twitter:title" content="Courier Company in Dubai | INC Shipping Courier Services UAE" />
+    <meta property="twitter:description"
+        content="INC Express is a leading Courier Company in Dubai, offering seamless corporate delivery solutions across diverse industries with 24/7 service for a smooth supply chain." />
+    <meta property="twitter:image" content="" />
+
+
+
+
+
 </head>
 
 <body>
