--- a/cross-trade.html
+++ b/cross-trade.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Services</title>
+
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -34,6 +34,47 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Cross Trade Service Company in Dubai | INC Shipping Dubai </title>
+    <meta name="description" content=”Cross Trade Service Company in Dubai: Expert global transport solutions via air,
+        sea, or road. Simplify international trade with our comprehensive and professional services.">
+    <meta name="keywords" content="Cross Trade Service, Cross Trade Service Company in Dubai, Cross Trade Service Provider in Dubai, Cross Trade Service Provider Dubai, Shipping Company in Dubai, Air Freight Company in Dubai, International Cargo Services Dubai, UAE, Shipping and Logistics Company in Dubai, Sea Freight Shipping Service in Dubai,
+Road Freight Services in Dubai " />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/cross-trade" />
+    <meta name="DC.title" content="Cross Trade Service Company in Dubai | INC Shipping Dubai" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Cross Trade Service Company in Dubai | INC Shipping Dubai" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content="https://incshipping.com/cross-trade" />
+    <meta property="og:description" content="Cross Trade Service Company in Dubai: Expert global transport solutions via
+        air, sea, or road. Simplify international trade with our comprehensive and professional services." />
+    <meta property="og:type" content=website />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/cross-trade" />
+    <meta property="twitter:title" content="Cross Trade Service Company in Dubai | INC Shipping Dubai" />
+    <meta property="twitter:description"
+        content="Cross Trade Service Company in Dubai: Expert global transport solutions via air, sea, or road. Simplify international trade with our comprehensive and professional services." />
+    <meta property="twitter:image" content="" />
+
+
+
+
+
 </head>
 
 <body>
