--- a/customs-clearance.html
+++ b/customs-clearance.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Services</title>
+
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -34,6 +34,47 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Customs Clearance Services in Dubai | Customs Clearance Agent UAE</title>
+    <meta name="description" content=”INC Express offers seamless Customs Clearance Services in Dubai, ensuring
+        efficient freight forwarding, documentation, and authority procedures for hassle-free import and export.">
+    <meta name="keywords"
+        content="Global Trade Compliance and Customs Clearance in Dubai, Customs Clearance in Dubai, Customs Clearance Services in Dubai, Customs Clearance Company in Dubai, Freight Forwarding Company Dubai, Cargo Service Dubai, Customs Clearance Agent in Dubai, Import and Export Customs Clearance Dubai, Best Customs Clearance in Dubai, International Cargo Services Dubai, UAE " />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/customs-clearance" />
+    <meta name="DC.title" content="Customs Clearance Services in Dubai | Customs Clearance Agent UAE" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Customs Clearance Services in Dubai | Customs Clearance Agent UAE"/>
+    <meta property="og:site_name" content=INC Express Shipping L.L.C>
+    <meta property="og:url" content=https://incshipping.com/customs-clearance>
+    <meta property="og:description" content=INC Express offers seamless Customs Clearance Services in Dubai, ensuring
+        efficient freight forwarding, documentation, and authority procedures for hassle-free import and export.>
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/customs-clearance" />
+    <meta property="twitter:title" content="Customs Clearance Services in Dubai | Customs Clearance Agent UAE" />
+    <meta property="twitter:description"
+        content="INC Express offers seamless Customs Clearance Services in Dubai, ensuring efficient freight forwarding, documentation, and authority procedures for hassle-free import and export." />
+    <meta property="twitter:image" content="" />
+
+
+
+
+
 </head>
 
 <body>
