--- a/dangerous-goods.html
+++ b/dangerous-goods.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Services</title>
+
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -34,6 +34,48 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Dangerous Goods Shipping and Handling Services in Dubai | UAE</title>
+    <meta name="description" content="INC Shipping's experienced team specializes in safely transporting hazardous items
+        with comprehensive Dangerous Goods Shipping and Handling Services in Dubai | UAE Ensuring strict compliance with
+        all rules and regulations." />
+    <meta name="keywords"
+        content="Handling of Dangerous Goods in Dubai, UAE, Dangerous Goods Handling Shipping Company in Dubai, Dangerous Goods Shipping and Handling Services in Dubai/UAE, Dangerous Goods Safe Packing & Shipping in Dubai, Dangerous Goods Transport Company in Dubai, UAE, Certified Dangerous Goods Packaging Solutions Company Dubai, Dangerous Goods Packaging & Shipping Services in Dubai/UAE, Dangerous Goods Transportation Services Dubai, Hazardous Goods Shipping Services Dubai, Freight Forwarding Dubai" />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/dangerous-goods" />
+    <meta name="DC.title" content="Dangerous Goods Shipping and Handling Services in Dubai | UAE" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Dangerous Goods Shipping and Handling Services in Dubai | UAE" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content="https://incshipping.com/dangerous-goods" />
+    <meta property="og:description"
+        content="INC Shipping's experienced team specializes in safely transporting hazardous items with comprehensive Dangerous Goods Shipping and Handling Services in Dubai | UAE Ensuring strict compliance with all rules and regulations." />
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/shipment-to-far-east" />
+    <meta property="twitter:title" content="Dangerous Goods Shipping and Handling Services in Dubai | UAE" />
+    <meta property="twitter:description"
+        content="INC Shipping's experienced team specializes in safely transporting hazardous items with comprehensive Dangerous Goods Shipping and Handling Services in Dubai | UAE Ensuring strict compliance with all rules and regulations." />
+    <meta property="twitter:image" content="" />
+
+
+
+
+
 </head>
 
 <body>
