--- a/healthcare.html
+++ b/healthcare.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Services</title>
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -34,6 +33,47 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Medical Equipment Shipping Dubai | Healthcare Instrument Shipping UAE</title>
+    <meta name="description" content="Secure and efficient Medical Equipment Shipping Dubai.INC Shipping ensures the
+        safe and timely delivery of crucial healthcare devices and supplies." />
+    <meta name="keywords"
+        content="Medical Equipment Shipping Services in Dubai, Medical Equipment Shipping Dubai, Healthcare Instrument Shipping UAE, Healthcare Instrument Shipping in Dubai, Medical Shipping Services Dubai, Shipping Services Dubai, shipping in Dubai, Shipping Cargo Services Dubai, Sea Freight Shipping Company Dubai, International Shipping Services" />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/healthcare" />
+    <meta name="DC.title" content="Medical Equipment Shipping Dubai | Healthcare Instrument Shipping UAE" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Medical Equipment Shipping Dubai | Healthcare Instrument Shipping UAE" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content="https://incshipping.com/healthcare" />
+    <meta property="og:description"
+        content="Secure and efficient Healthcare Instrument Shipping in Dubai. INC Shipping ensures the safe and timely delivery of crucial healthcare devices and supplies." />
+    <meta property="og:type" content=website/>
+    <meta property="og:image" content=""/>
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/healthcare" />
+    <meta property="twitter:title" content="Medical Equipment Shipping Dubai | Healthcare Instrument Shipping UAE" />
+    <meta property="twitter:description"
+        content="Secure and efficient Medical Equipment Shipping Dubai.INC Shipping ensures the safe and timely delivery of crucial healthcare devices and supplies." />
+    <meta property="twitter:image" content="" />
+
+
+
+
+
 </head>
 
 <body>
