--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Home</title>
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
 
@@ -33,6 +32,43 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Best Logistics and Shipping Company in Dubai, UAE | INC SHIPPING</title>
+    <meta name="description"
+        content="INC Express Shipping LLC excels in its name as the Best Logistics and Shipping Company in Dubai UAE, with an extensive approach in more than 20 countries.">
+    <meta name="keywords"
+        content="Sea Freight Shipping Service in Dubai, Road Freight Services in Dubai, Temperature Control Cargo Service Dubai, Cross Trade Service Company in Dubai, Corporate Courier Service in Dubai, Medical Equipment Shipping Services in Dubai, Sea Freight Services in Dubai, Air Freight Company in Dubai, Transportation Service in Dubai, Road Transport in Dubai" />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com" />
+    <meta name="DC.title" content="Best Logistics and Shipping Company in Dubai, UAE | INC SHIPPING" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Best Logistics and Shipping Company in Dubai UAE | INC SHIPPING" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C">
+    <meta property="og:url" content=https://incshipping.com />
+    <meta property="og:description" content="INC Express Shipping LLC excels in its name as the Best Logistics and
+        Shipping Company in Dubai UAE, with an extensive approach in more than 20 countries." />
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/" />
+    <meta property="twitter:title" content="Best Logistics and Shipping Company in Dubai UAE | INC SHIPPING" />
+    <meta property="twitter:description"
+        content="INC Express Shipping LLC excels in its name as the Best Logistics and Shipping Company in Dubai UAE, with an extensive approach in more than 20 countries." />
+    <meta property="twitter:image" content="" />
+
 </head>
 
 <body>
