--- a/international-freight-forwarders.html
+++ b/international-freight-forwarders.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC</title>
     <link rel="stylesheet" href="international-freight-forwarders.css">
 
     <!-- bootstrap -->
@@ -43,6 +42,49 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>International Cargo Services Dubai, UAE | International Freight Forwarders</title>
+    <meta name="description" content="Efficient logistics and transportation company in Dubai, UAE, specializing in
+        multi-modal transport, warehousing, inventory management, timely deliveries, and real-time shipment tracking.
+        International Cargo Services." />
+    <meta name="keywords"
+        content="Cross Trade Service Company in Dubai, Corporate Courier Service in Dubai, Medical equipment Shipping Services in Dubai, Sea Freight Services in Dubai, Customs Clearance Services in Dubai, Warehousing Company in Dubai / UAE, Best Courier Channel Partners In Dubai, Hazardous goods shipping services in Dubai, Pharmaceutical shipping service in Dubai, Air freight company in Dubai, Freight forwarding Dubai" />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/international-freight-forwarders" />
+    <meta name="DC.title" content="International Cargo Services Dubai, UAE | International Freight Forwarders" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="International Cargo Services Dubai, UAE | International Freight Forwarders" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content="https://incshipping.com/international-freight-forwarders">
+    <meta property="og:description"
+        content="Efficient logistics and transportation company in Dubai, UAE, specializing in multi-modal transport, warehousing, inventory management, timely deliveries, and real-time shipment tracking. International Cargo Services.">
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/international-freight-forwarders" />
+    <meta property="twitter:title"
+        content="International Cargo Services Dubai, UAE | International Freight Forwarders" />
+    <meta property="twitter:description"
+        content="Efficient logistics and transportation company in Dubai, UAE, specializing in multi-modal transport, warehousing, inventory management, timely deliveries, and real-time shipment tracking. International Cargo Services." />
+    <meta property="twitter:image" content="" />
+
+
+
+
+
 </head>
 
 
