--- a/pharma-shipment-handling.html
+++ b/pharma-shipment-handling.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Services</title>
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -33,6 +32,47 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Pharmaceutical Shipping Service Dubai | UAE Pharma Shipments</title>
+    <meta name="description" content="Safe, secure, and compliant Pharmaceutical Shipping Service in Dubai. We
+        prioritize the integrity of your pharmaceutical products during shipment and services." />
+    <meta name="keywords"
+        content="Pharmaceutical Shipping Service in Dubai, UAE Pharma Shipments, INC Pharmaceutical Shipping Service Dubai, Medical Equipment Shipping Services in Dubai Medical Equipment Shipping Dubai, Healthcare Instrument Shipping UAE, Freight Forwarding Dubai, International Shipping Services, Shipping and Logistics, Company in Dubai, Sea Freight Dubai" />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/pharma-shipment-handling" />
+    <meta name="DC.title" content="Pharmaceutical Shipping Service Dubai | UAE Pharma Shipments" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Pharmaceutical Shipping Service Dubai | UAE Pharma Shipments" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content="https://incshipping.com/pharma-shipment-handling" />
+    <meta property="og:description"
+        content="Safe, secure, and compliant Pharmaceutical Shipping Service in Dubai. We prioritize the integrity of your pharmaceutical products during shipment and services.">
+    <meta property="og:type" content=website />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/pharma-shipment-handling" />
+    <meta property="twitter:title" content="Pharmaceutical Shipping Service Dubai | UAE Pharma Shipments" />
+    <meta property="twitter:description"
+        content="Safe, secure, and compliant Pharmaceutical Shipping Service in Dubai. We prioritize the integrity of your pharmaceutical products during shipment and services." />
+    <meta property="twitter:image" content="" />
+
+
+
+
+
 </head>
 
 <body>
