--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Contact Us</title>
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -33,6 +32,47 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Privacy Policy | INC Shipping - Your Perfect Shipping Partners in Dubai</title>
+    <meta name="description"
+        content="Welcome to INC Express Shipping LLC's official site. We prioritize your privacy, outlining how we collect, use, and protect your data in our Privacy Policy." />
+    <meta name="keywords" content="" />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/privacy-policy" />
+    <meta name="DC.title" content="Privacy Policy | INC Shipping - Your Perfect Shipping Partners in Dubai" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Privacy Policy | INC Shipping - Your Perfect Shipping Partners in Dubai" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content=https://incshipping.com/privacy-policy />
+    <meta property="og:description"
+        content="Welcome to INC Express Shipping LLC's official site. We prioritize your privacy, outlining how we collect, use, and protect your data in our Privacy Policy." />
+    <meta property="og:type" content=website />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/privacy-policy" />
+    <meta property="twitter:title" content="Privacy Policy | INC Shipping - Your Perfect Shipping Partners in Dubai" />
+    <meta property="twitter:description"
+        content="Welcome to INC Express Shipping LLC's official site. We prioritize your privacy, outlining how we collect, use, and protect your data in our Privacy Policy." />
+    <meta property="twitter:image" content="" />
+
+
+
+
+
 </head>
 
 <body>
