--- a/project-cargo.html
+++ b/project-cargo.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Services</title>
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -33,6 +32,49 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Project Cargo Logistics Dubai | Cargo Services in UAE</title>
+    <meta name="description" content="INC Express provides superior Project Cargo Logistics in Dubai and cargo services
+        across the UAE. We specialize in international shipping for heavy machinery and bulk goods with expert handling
+        and technical skills." />
+    <meta name="keywords"
+        content="Project Cargo Logistics Dubai, Cargo Shipping Services Dubai, Project Cargo Handling in UAE, Project Cargo Handling Dubai, Cargo Services In UAE, Project Cargo Logistics Services Dubai, Cargo Services UAE, Project Cargo Freight Forwarders in Dubai, Project Cargo Management In UAE, Project Cargo Transportation Services in Dubai " />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/project-cargo" />
+    <meta name="DC.title" content="Project Cargo Logistics Dubai | Cargo Services in UAE" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Project Cargo Logistics Dubai | Cargo Services in UAE" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content=https://incshipping.com/project-cargo>
+    <meta property="og:description" content="INC Express provides superior Project Cargo Logistics in Dubai and cargo
+        services across the UAE. We specialize in international shipping for heavy machinery and bulk goods with expert
+        handling and technical skills." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/project-cargo" />
+    <meta property="twitter:title" content="Project Cargo Logistics Dubai | Cargo Services in UAE" />
+    <meta property="twitter:description"
+        content="INC Express provides superior Project Cargo Logistics in Dubai and cargo services across the UAE. We specialize in international shipping for heavy machinery and bulk goods with expert handling and technical skills." />
+    <meta property="twitter:image" content="" />
+
+
+
+
+
 </head>
 
 <body>
