--- a/shipment-to-far-east.html
+++ b/shipment-to-far-east.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Services</title>
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -33,6 +32,47 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Shipment To Far East Dubai | Shipping Services To Far East</title>
+    <meta name="description" content="Efficient and reliable International Shipment Service in Dubai. INC Shipping
+        connects your business to the world with our trusted global logistics solutions."/>
+    <meta name="keywords"
+        content="International Shipping Services, Shipments to Far East Dubai, Shipping Company in Dubai, Shipping Services Dubai/UAE, Shipping and Logistics Company in Dubai, Shipping Services Dubai, Shipping in Dubai, Shipping cargo services Dubai, Freight Forwarding Dubai, Sea Freight Shipping Company Dubai" />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/shipment-to-far-east" />
+    <meta name="DC.title" content="Shipment To Far East Dubai | Shipping Services To Far East" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Shipment To Far East Dubai | Shipping Services To Far East"/>
+    <meta property="og:site_name" content="INC Express Shipping L.L.C"/>
+    <meta property="og:url" content=https://incshipping.com/shipment-to-far-east/>
+    <meta property="og:description"
+        content="Efficient and reliable international shipment service in Dubai. INC Shipping connects your business to the world with our trusted global logistics solutions." />
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/shipment-to-far-east" />
+    <meta property="twitter:title" content="Shipment To Far East Dubai | Shipping Services To Far East" />
+    <meta property="twitter:description"
+        content="Efficient and reliable international shipment service in Dubai. INC Shipping connects your business to the world with our trusted global logistics solutions." />
+    <meta property="twitter:image" content="" />
+
+
+
+
+
 </head>
 
 <body>
