--- a/road-freight.html
+++ b/road-freight.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Services</title>
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -33,6 +32,47 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Road Freight Forwarding Services in Dubai | Road Transporters in Dubai</title>
+    <meta name="description" content="Discover reliable Road Freight Forwarding Services in Dubai with INC SHIPPING.
+        Streamlined Logistics Solutions for your Transportation needs. Contact us today!"/>
+    <meta name="keywords"
+        content="Transportation Service in Dubai, Road Transport in Dubai, Logistic Service in Dubai, Third-Party Logistics, Express Logistics in Dubai, Freight Forwarding Company in Dubai, Land Freight In Dubai, UAE, Road Freight Dubai, Dubai Logistics Services, Freight Forwarding Dubai" />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/road-freight" />
+    <meta name="DC.title" content="Road Freight Forwarding Services in Dubai | Road Transporters in Dubai" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Road Freight Forwarding Services in Dubai | Road Transporters in Dubai"/>
+    <meta property="og:site_name" content="INC Express Shipping L.L.C"/>
+    <meta property="og:url" content="https://incshipping.com/road-freight"/>
+    <meta property="og:description" content="Discover reliable Road Freight Forwarding Services in Dubai with INC
+        SHIPPING. Streamlined Logistics Solutions for your Transportation needs. Contact us today!"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/road-freight" />
+    <meta property="twitter:title" content="Road Freight Forwarding Services in Dubai | Road Transporters in Dubai" />
+    <meta property=" twitter:description"
+        content="Discover reliable Road Freight Forwarding Services in Dubai with INC SHIPPING. Streamlined Logistics Solutions for your Transportation needs. Contact us today!" />
+    <meta property="twitter:image" content="" />
+
+
+
+
+
 </head>
 
 <body>
