--- a/sea-freight.html
+++ b/sea-freight.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Services</title>
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -34,6 +33,43 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Sea Freight Forwarding Company in Dubai | INC Shipping Services</title>
+    <meta name="description" content="Reliable Sea Freight Forwarding Company in Dubai offering efficient,
+        cost-effective shipping solutions. Choose us for all your sea freight needs in Dubai. Contact us today!" />
+    <meta name="keywords"
+        content="Sea Freight Dubai, Sea Freight Companies in Dubai, Sea Freight Service in Dubai, Sea Freight Services Dubai, Sea Freight Logistics Service in Dubai, Sea Freight Forwarder Dubai, Sea Freight Shipping Company Dubai, Sea Freight Cargo Service in Dubai, Sea Freight Forwarding Services Dubai, Freight Forwarding Dubai, Shipping and Logistics Companies in Dubai" />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/sea-freight" />
+    <meta name="DC.title" content="Sea Freight Forwarding Company in Dubai | INC Shipping Services" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Sea Freight Company in Dubai | INC Shipping Services" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content=https://incshipping.com/sea-freight>
+    <meta property="og:description" content="Reliable Sea Freight Forwarding Company in Dubai offering efficient,
+        cost-effective shipping solutions. Choose us for all your sea freight needs in Dubai. Contact us today!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/sea-freight" />
+    <meta property="twitter:title" content="Sea Freight Company in Dubai | INC Shipping Services" />
+    <meta property="twitter:description"
+        content="Reliable Sea Freight Forwarding Company in Dubai offering efficient, cost-effective shipping solutions. Choose us for all your sea freight needs in Dubai. Contact us today!" />
+    <meta property="twitter:image" content="" />
+
 </head>
 
 <body>
