--- a/temprature-controlled-cargo.html
+++ b/temprature-controlled-cargo.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Services</title>
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -33,6 +32,48 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>Temperature Control Cargo Service Dubai | INC Shipping</title>
+    <meta name="description" content="Reliable Temperature Control Cargo Service in Dubai ensures the safe transport for
+        sensitive goods with advanced technology and 24/7 monitoring. Trust us for your logistic needs." />
+    <meta name="keywords"
+        content="Temperature-Controlled Cargo Services, Temperature Control Cargo Service Dubai, Temperature-Controlled Cargo Transportation in Dubai, Temperature-Controlled Shipping Dubai, Temp-Controlled Freight Service Dubai, Freight Forwarding Dubai, Transportation Service in Dubai, Express Logistics in Dubai, Shipping and Logistics Company in Dubai, Corporate Courier Service in Dubai " />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/temprature-controlled-cargo" />
+    <meta name="DC.title" content="Temperature Control Cargo Service Dubai | INC Shipping" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Temperature Control Cargo Service Dubai | INC Shipping" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content="https://incshipping.com/temprature-controlled-cargo" />
+    <meta property="og:description"
+        content="Reliable Temperature Control Cargo Service in Dubai ensures the safe
+        transport for sensitive goods with advanced technology and 24/7 monitoring. Trust us for your logistic needs." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/temprature-controlled-cargo" />
+    <meta property="twitter:title" content="Temperature Control Cargo Service Dubai | INC Shipping" />
+    <meta property=" twitter:description"
+        content="Reliable Temperature Control Cargo Service in Dubai ensures the safe transport for sensitive goods with advanced technology and 24/7 monitoring. Trust us for your logistic needs." />
+    <meta property="twitter:image" content="" />
+
+
+
+
+
 </head>
 
 <body>
