--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INC-Contact Us</title>
 
     <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <link rel="stylesheet" href="css/style.css">
@@ -33,6 +32,44 @@
 
         gtag('config', 'AW-16617021949');
     </script>
+
+
+
+    <!-- Primary Meta Tags -->
+    <title>INC Shipping Policies: Terms and Conditions for Shipping Services | Dubai, UAE</title>
+    <meta name="description" content="Welcome to INC Express Shipping LLC's official website. Agree to our Terms and
+        Conditions to access our freight forwarding, logistics, transport, and warehousing services. We prioritize
+        personalized service to ensure safe and timely delivery of your cargo." />
+    <meta name="keywords" content="" />
+    <meta name="language" content="english" />
+    <meta name="content-language" content="english" />
+    <meta name="rating" content="General" />
+    <meta name="robots" content="follow,index" />
+    <link rel="canonical" href="https://incshipping.com/terms-and-conditions" />
+    <meta name="DC.title" content="INC Shipping Policies: Terms and Conditions for Shipping Services | Dubai, UAE" />
+    <meta name="geo.region" content="AE" />
+    <meta name="geo.placename" content="Atmar" />
+    <meta name="geo.position" content="25.3;55.4" />
+    <meta name="ICBM" content="25.3, 55.4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="INC Shipping Policies: Terms and Conditions for Shipping Services | Dubai, UAE">
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content="https://incshipping.com/terms-and-conditions" />
+    <meta property="og:description"
+        content="Welcome to INC Express Shipping LLC's official site. We prioritize your privacy, outlining how we collect, use, and protect your data in our Privacy Policy.                
+Welcome to INC Express Shipping LLC's official website. Agree to our Terms and Conditions to access our freight forwarding, logistics, transport, and warehousing services. We prioritize personalized service to ensure safe and timely delivery of your cargo." />
+    <meta property="og:type" content=website>
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://incshipping.com/terms-and-conditions" />
+    <meta property="twitter:title"
+        content="INC Shipping Policies: Terms and Conditions for Shipping Services | Dubai, UAE" />
+    <meta property="twitter:description"
+        content="Welcome to INC Express Shipping LLC's official website. Agree to our Terms and Conditions to access our freight forwarding, logistics, transport, and warehousing services. We prioritize personalized service to ensure safe and timely delivery of your cargo." />
+    <meta property="twitter:image" content="" />
 </head>
 
 <body>
